--- a/index.html
+++ b/index.html
@@ -1098,8 +1098,8 @@
     </div>
 
     <!-- Load Scripts -->
-    <script src="../js/main.js"></script>
-    <script src="../js/cart.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/cart.js"></script>
 
     <!-- Unified Script -->
     <script>
@@ -1153,3 +1153,4 @@
     </script>
 </body>
 </html>
+
