--- a/index.html
+++ b/index.html
@@ -989,6 +989,14 @@
 					<i class="fas fa-search"></i>
 				</div>
             </div>
+			<!-- Google Button -->
+			<button class="social-btn google-btn" onclick="signInWithGoogle()">
+				<i class="fab fa-google"></i> Sign in with Google
+			</button>
+			<!-- Facebook Button -->
+			<button class="social-btn facebook-btn" onclick="signInWithFacebook()">
+				<i class="fab fa-facebook-f"></i> Sign in with Facebook
+			</button>
             <div class="auth-buttons">
                 <button class="btn btn-outline" id="signInBtn">
 					<i class="fas fa-user"></i> Log In
