--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
         }
 
         .brand-13 {
-            position: absolute;
+            position: center;
             top: -30px;
             left: 0;
             background: var(--primary);
@@ -1676,3 +1676,4 @@
 
 </body>
 </html>
+
