--- a/index.html
+++ b/index.html
@@ -1329,6 +1329,15 @@
             </div>
             <div class="modal-body">
                 <div class="social-login">
+				<!-- Google Button -->
+				<button class="social-btn google-btn" onclick="signInWithGoogle()">
+				  <i class="fab fa-google"></i> Sign in with Google
+				</button>
+
+				<!-- Facebook Button -->
+				<button class="social-btn facebook-btn" onclick="signInWithFacebook()">
+				  <i class="fab fa-facebook-f"></i> Sign in with Facebook
+				</button>
                     <button class="social-btn google-btn"><i class="fab fa-google"></i> Sign in with Google</button>
                     <button class="social-btn facebook-btn"><i class="fab fa-facebook-f"></i> Sign in with Facebook</button>    
                 </div>
@@ -1676,4 +1685,3 @@
 
 </body>
 </html>
-
