--- a/pages/seller/seller-dashboard.html
+++ b/pages/seller/seller-dashboard.html
@@ -222,8 +222,9 @@
                 <a href="../../index.html" class="btn btn-outline">
                     <i class="fas fa-home"></i> Home
                 </a>
-                <a href="cart.html" class="btn btn-outline">
-                    <i class="fas fa-shopping-cart"></i> Cart
+                <button class="btn btn-primary" id="logoutBtn">
+                    <i class="fas fa-sign-out-alt"></i> Logout
+                </button>
                 </a>
             </div>
         </div>
@@ -418,4 +419,5 @@
         });
     </script>
 </body>
+
 </html>
