--- a/pages/seller/seller-dashboard.html
+++ b/pages/seller/seller-dashboard.html
@@ -421,3 +421,14 @@
 </body>
 
 </html>
+// Logout
+        document.getElementById('logoutBtn').addEventListener('click', () => {
+            if (confirm("Are you sure you want to log out?")) {
+                localStorage.removeItem('unityxhub_user');
+                window.location.href = '../index.html';
+            }
+        });
+    </script>
+
+</body>
+</html>
