--- a/pages/seller/seller-dashboard.html
+++ b/pages/seller/seller-dashboard.html
@@ -223,7 +223,7 @@
                     <i class="fas fa-home"></i> Home
                 </a>
                 <button class="btn btn-primary" id="logoutBtn">
-                    <i class="fas fa-sign-out-alt"></i> Logout
+                    <i class="fas fa-sign-out-alt"></i> Log Out
                 </button>
             </div>
         </div>
@@ -234,7 +234,7 @@
         <div class="tabs-container">
             <a href="../../index.html"><i class="fas fa-home"></i> Home</a>
             <a href="../../pages/jobs/job-post.html"><i class="fas fa-briefcase"></i> Post Job</a>
-            <a href="../../pages/freelancer/freelancer/freelance-newsfeed.html"><i class="fas fa-hammer"></i> Freelance</a>
+            <a href="../../pages/freelancer/freelance-newsfeed.html"><i class="fas fa-hammer"></i> Freelance</a>
             <a href="../../pages/business/business-directory.html"><i class="fas fa-building"></i> Business</a>
             <a href="../../pages/classifiedads/classifieds.html"><i class="fas fa-ad"></i> Classifieds</a>
             <a href="../../pages/services/business-feed.html"><i class="fas fa-wrench"></i> Services</a>
@@ -338,7 +338,6 @@
             <li><a href="../../pages/business/business-directory.html"><i class="fas fa-building"></i> Business</a></li>
             <li><a href="../classifiedads/classifieds.html"><i class="fas fa-ad"></i> Classifieds</a></li>
             <li><a href="#" class="active"><i class="fas fa-store"></i> My Store</a></li>
-            <li><a href="cart.html"><i class="fas fa-shopping-cart"></i> Cart</a></li>
         </ul>
     </div>
 
@@ -368,7 +367,6 @@
                     <li><a href="../../pages/business/business-directory.html"><i class="fas fa-chevron-right"></i> Business Directory</a></li>
                     <li><a href="../../pages/freelancer/freelance-newsfeed.html"><i class="fas fa-chevron-right"></i> Freelance Services</a></li>
                     <li><a href="../../pages/classifiedads/classifieds.html"><i class="fas fa-chevron-right"></i> Classified Ads</a></li>
-                    <li><a href="cart.html"><i class="fas fa-chevron-right"></i> View Cart</a></li>
                 </ul>
             </div>
 
@@ -408,27 +406,14 @@
     <!-- Load Scripts -->
     <script src="../../js/main.js"></script>
     <script>
-        // Simulate cart badge update
-        document.addEventListener('DOMContentLoaded', () => {
-            const cart = JSON.parse(localStorage.getItem('unityxhub_cart') || '[]');
-            const badge = document.getElementById('cartBadge');
-            if (badge) {
-                badge.textContent = cart.length;
-            }
-        });
-    </script>
-</body>
-
-</html>
-// Logout
+        // Logout functionality
         document.getElementById('logoutBtn').addEventListener('click', () => {
             if (confirm("Are you sure you want to log out?")) {
                 localStorage.removeItem('unityxhub_user');
-                window.location.href = '../index.html';
+                window.location.href = '../../index.html';
             }
         });
     </script>
 
 </body>
 </html>
-
